# manm-cs

./: .gitignore  Diagram.ipynb  Dockerfile  LICENSE  README.md  discrete_generation.ipynb  requirements.txt  setup.cfg
.github/workflows/: docker-publish.yml  publish-to-pypi.yml  test-python.yml
analysis/: DiscretePlotting.ipynb  Mixed.ipynb  MultivariateNormalCorrelations.ipynb  MultivariatePlotting.ipynb  data.csv  graph.gml  ground_truth.gml
evaluation/: Diagram.ipynb
evaluation/data/: 04022021.csv
experiments/: README.md  data.csv  run.py
experiments/data/: benchmarking-experiment-01d3d8bf49984042709bc0ef9f589ee7-data.csv  benchmarking-experiment-15a3ac3459d9a2dc77e438dcb76fa8fe-data.csv  benchmarking-experiment-23e64025495e664d433cfdc448ccbd67-data.csv  benchmarking-experiment-2cda3ffac30aadace1e63eb173f6a286-data.csv  benchmarking-experiment-3834d682d47655a1a234a3002f6f355d-data.csv  benchmarking-experiment-39c4d2a240dd173c715c3ea01d845bed-data.csv  benchmarking-experiment-40b9e03bc7c0f82903dcbf95cf7285b9-data.csv  benchmarking-experiment-4205c17b8dcebb4966baf06753c3a26d-data.csv  benchmarking-experiment-4bd276f3a57439501421d8119e9fb5bf-data.csv  benchmarking-experiment-4e92f0556c868869892b63e0d9dbb0c2-data.csv  benchmarking-experiment-5dc987e05c20a443e689a559cd65bd6e-data.csv  benchmarking-experiment-6bbb33f9f5db41eedc312e9ac9c4c9fc-data.csv  benchmarking-experiment-76ab881624b2c2b0c07568344f263fb7-data.csv  benchmarking-experiment-85601d612c957246aa65a96110b8759a-data.csv  benchmarking-experiment-8db56e5787e2cda32a174aa3f60247e8-data.csv  benchmarking-experiment-8f02ea6ab9c2a3e92725c9d7e8eff04b-data.csv  benchmarking-experiment-a1fb24fcb6e90a04b8f397900b251625-data.csv  benchmarking-experiment-b48224161fb847a0fede0e68a7280030-data.csv  benchmarking-experiment-d9727869e2a70ca4aab2acc4ad571bf7-data.csv  benchmarking-experiment-dc776b8d0179db0ad569f6c492621417-data.csv  benchmarking-experiment-e3b0c4f2a994de1a51af499c9ef2f422-data.csv  benchmarking-experiment-e4a8b2e474840b441b78cc9ad004c544-data.csv  benchmarking-experiment-f5759bf010d8ae659b9c321e48ad3808-data.csv  benchmarking-experiment-ffcdf68b2acec7593b25c9f4ec461130-data.csv
experiments/evaluation/: data-generation-discrete.ipynb  data-generation-mixed.ipynb  evaluation-pcdag_hamming.ipynb  job-result-evaluation.ipynb
manm_cs/: __main__.py
src/: __bench__.py  __main__.py  example_graphs.py  main.py  performance_benchmark.py  utils.py
test/: test_manm_cs.py  test_manm_cs_pypi.py
(+98 files in other folders)
