[metadata]
name = manm-cs
version = 0.0.1
author = hpi-epic
author_email = 26392770+ben243871694@users.noreply.github.com
description = Data generation for causal structure learning based on mixed additive noise model (MANM)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hpi-epic/manm-cs
project_urls =
    Bug Tracker = https://github.com/hpi-epic/manm-cs/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
