[metadata]
name = manm_cs
version = 0.0.4
author = Johannes Huegle, Christopher Hagedorn
author_email = johannes.huegle@hpi.de
description = Data generation for causal structure learning based on mixed additive noise model (MANM)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hpi-epic/manm-cs
project_urls =
    Bug Tracker = https://github.com/hpi-epic/manm-cs/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pandas==1.1.5
    numpy==1.19.5
    multiprocess==0.70.11.1
    validation==0.5.0
    networkx==2.5
    pathos==0.2.7


[options.packages.find]
where = src

